# Os_Labs

krSources/: BankAccount.cpp  BankAccount.h  BankAccountQueue.cpp  BankAccountQueue.h  CMakeLists.txt  ConsoleInformation.cpp  ConsoleInformation.h  Queue.cpp  Queue.h  QueueApplier.cpp  QueueApplier.h  SceneApplier.cpp  SceneApplier.h  main.cpp
lab1LinuxSources/: signal.c
lab1Task10WinSources/: keyLogger.cpp
lab1Task1LinuxSources/: process.c
lab1Task1WinSources/: process.c
lab1Task2LinuxSources/: threads.c
lab1Task2WinSources/: threads.c
lab1WinSources/: signal.c
